--- a/matminProject/WebContent/resources/css/member/memberCommonEnrollForm.css
+++ b/matminProject/WebContent/resources/css/member/memberCommonEnrollForm.css
@@ -69,7 +69,7 @@ input[name=email], input[name=domain]{
 
 #enroll-btn{
     background-color: #E4910D;
-    border: #E4910D;
+    border-color: #E4910D;
     /* width: 300px; */
     height: 40px;
     /* line-height: 25px; */
