--- a/matminProject/WebContent/resources/css/member/memberCommonLogin.css
+++ b/matminProject/WebContent/resources/css/member/memberCommonLogin.css
@@ -18,13 +18,13 @@ form>input[type=text], form>input[type=password]{
     height: 45px;
     margin: 5px;
     border-radius: 5px;
-    border: 1px solid gray;
+    border-color: 1px solid gray;
     padding-left: 5px;
 }
 
 #loginBtn{
     background-color: #E4910D;
-    border: #E4910D;
+    border-color: #E4910D;
     width: 300px;
     height: 40px;
     line-height: 25px;
@@ -47,7 +47,7 @@ form>input[type=text], form>input[type=password]{
 
 #naver-login-btn{
     background-color: #03c75a;
-    border: #03c75a;
+    border-color: #03c75a;
     width: 300px;
     height: 45px;
     line-height: 44px;
