--- a/matminProject/WebContent/resources/css/member/memberFindIdPwd.css
+++ b/matminProject/WebContent/resources/css/member/memberFindIdPwd.css
@@ -27,7 +27,7 @@
 
 #findIdBtn, #findPwdBtn{
     background-color: #E4910D;
-    border: #E4910D;
+    border-color: #E4910D;
     width: 300px;
     height: 50px;
     line-height: 35px;
@@ -45,4 +45,12 @@ form>input{
 p{
     font-size: 30px;
     color: #E4910D;
+}
+
+.message{
+    color: red;
+    font-size: 13px;
+    font-weight: bold;
+    width: 300px;
+    text-align: left;
 }
