--- a/matminProject/WebContent/resources/css/member/memberCommonLogin.css
+++ b/matminProject/WebContent/resources/css/member/memberCommonLogin.css
@@ -18,7 +18,7 @@ form>input[type=text], form>input[type=password]{
     height: 45px;
     margin: 5px;
     border-radius: 5px;
-    border-color: 1px solid gray;
+    border: 1px solid gray;
     padding-left: 5px;
 }
 
