--- a/matminProject/WebContent/resources/css/member/memberFindIdPwd.css
+++ b/matminProject/WebContent/resources/css/member/memberFindIdPwd.css
@@ -27,7 +27,7 @@
 
 #findIdBtn, #findPwdBtn{
     background-color: #E4910D;
-    border-color: #E4910D;
+    border: none;
     width: 300px;
     height: 50px;
     line-height: 35px;
