--- a/matminProject/WebContent/resources/css/member/memberMyPage.css
+++ b/matminProject/WebContent/resources/css/member/memberMyPage.css
@@ -11,7 +11,7 @@
 
 #myPage-tab{
     height: 40px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid lightgray;
 }
 
 #myPage-tab ul{
@@ -37,7 +37,7 @@
     height: 100%;
     display: block;
     text-decoration: none;
-    color: black;
+    color: gray;
     font-size: 20px;
     cursor: pointer;
 }
@@ -66,6 +66,15 @@
     font-size: 18px;
 }
 
+#myInfo>table td{height: 58px;}
+
+#myInfo>table span{
+    display: block;
+    color: black;
+    text-align: left;
+    padding-left: 10px;
+}
+
 #myInfo input{
     width: 300px;
     height: 45px;
@@ -74,6 +83,16 @@
     border: 1px solid gray;
     /* border: none; */
     padding-left: 10px;
+}
+
+#selectAddress{
+    height: 45px;
+    border-radius: 5px;
+    margin-left: 5px;
+}
+
+#myInfo input:disabled{
+    background-color: lightgray;
 }
 
 #myInfo a{color: #E4910D;}
