마이페이지-비밀번호변경 구현 중
마이페이지-비밀번호변경 구현 중

--- a/matminProject/WebContent/resources/css/member/memberMyPage.css
+++ b/matminProject/WebContent/resources/css/member/memberMyPage.css
@@ -114,6 +114,15 @@
   margin: 0px 20px;
 }
 
+#myInfo button {
+  margin: 0px 20px;
+  color: #e4910d;
+}
+
+#changePwdTB{
+  margin: auto;
+}
+
 .message {
   color: red;
   font-size: 13px;
