마이페이지-찜꽁 해제 기능 구현

--- a/matminProject/WebContent/resources/css/member/memberMyPage.css
+++ b/matminProject/WebContent/resources/css/member/memberMyPage.css
@@ -154,10 +154,14 @@
   border-radius: 10px;
 }
 
-#star,
-#heart {
+#star {
   width: 15px;
   height: 15px;
+}
+
+#heart {
+  width: 20px;
+  height: 20px;
 }
 
 #myBoard,
