비밀번호 찾기 구현

--- a/matminProject/WebContent/resources/css/member/memberFindPwd.css
+++ b/matminProject/WebContent/resources/css/member/memberFindPwd.css
@@ -20,6 +20,15 @@
     margin-bottom: 10px;
 }
 
+.message{
+    display: none;
+    font-size: 14px;
+}
+
+#newPwdMsg, #checkPwdMsg{
+    color: red;
+}
+
 .btn-area{
     margin-top: 50px;
 }
