--- a/matminProject/WebContent/resources/css/member/memberMyPage.css
+++ b/matminProject/WebContent/resources/css/member/memberMyPage.css
@@ -32,6 +32,7 @@
 #alert {
   margin-left: 25px;
 }
+
 #alert,
 #mark,
 #review {
@@ -119,8 +120,30 @@
   color: #e4910d;
 }
 
-#changePwdTB{
+#leaveBtn{
+  float: right;
+  font-size: 13px;
+}
+
+#changePwdTB, #leaveMemTB{
   margin: auto;
+}
+
+#leaveMem .modal-header>h4{
+  padding-left: 190px;
+  color: red;
+}
+
+#leaveMem .modal-body>span{
+  display: block;
+  text-align: center;
+}
+
+.modal-body button{
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .message {
