--- a/matminProject/WebContent/resources/css/member/memberCommonLogin.css
+++ b/matminProject/WebContent/resources/css/member/memberCommonLogin.css
@@ -13,7 +13,7 @@
     margin-bottom: 20px;
 }
 
-form>input[type=text], form>input[type=password]{
+#input_id_pwd>form>input[type=text], #input_id_pwd>form>input[type=password]{
     width: 300px;
     height: 45px;
     margin: 5px;
@@ -69,4 +69,5 @@ form>input[type=text], form>input[type=password]{
     color: red;
     font-size: 13px;
     font-weight: bold;
+    margin-top: 15px;
 }
