아이디 찾기, 비밀번호 찾기 css 및 js 수정

--- a/matminProject/WebContent/resources/css/member/memberFindPwd.css
+++ b/matminProject/WebContent/resources/css/member/memberFindPwd.css
@@ -20,9 +20,18 @@
     margin-bottom: 10px;
 }
 
+.result-area>div>span {
+    display: block;
+    margin-bottom: 10px;
+}
+
 .message{
     display: none;
     font-size: 14px;
+}
+
+#authMsg{
+    text-align: left;
 }
 
 #newPwdMsg, #checkPwdMsg{
